# JimsCommon

./: .gitignore  CMakeLists.txt  README.md
include/: connection.h  logger.h  loggerSingleton.h  mqtt.h  mqttMessage.h  mqttSingleton.h  mySqlDB.h  mySqlDBSingleton.h  mySqlDatabase.h  propertyFile.h  randomSingleton.h  stopWatch.h
scripts/: mySqlTestSingleton.sh  randomTest.sh
source/: connection.cpp  logger.cpp  loggerSingleton.cpp  mqtt.cpp  mqttMessage.cpp  mqttSingleton.cpp  mySqlDB.cpp  mySqlDatabase.cpp  propertyFile.cpp  randomSingleton.cpp  stopWatch.cpp
test/: logTest.cpp  logTestBoost.cpp  logTestSingleton.cpp  mqttPubAutoTest.cpp  mqttPubTest.cpp  mqttSinTest.cpp  mqttSingletonTest.cpp  mqttSubSinFuncTest.cpp  mqttSubSinQueueTest.cpp  mqttSubTest.cpp  mySqlSingletonTest.cpp  mySqlTest.cpp  propertyTest.cpp  randomTest.cpp  stopWatchTest.cpp  webSocketSimple.cpp
